<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="141dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teddybear" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/allura"
        android:text="Teddy Bear"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="159dp"
        android:layout_height="21dp"
        android:layout_marginTop="-7dp"
        android:fontFamily="@font/cantarell"
        android:text="@string/kindergarten"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/cantarell"
        android:letterSpacing="0.5"
        android:text="@string/registerTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/parentName"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantarell"
        android:hint="@string/parentNameHint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/title_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentName" />

    <EditText
        android:id="@+id/homeAddress"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantarell"
        android:hint="@string/adressHint"
        android:inputType="textLongMessage"
        android:selectAllOnFocus="true"
        android:textColor="@color/title_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentPhoneNumber" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:background="@drawable/rounded_rectangle"
        android:clickable="true"
        android:enabled="true"
        android:fontFamily="@font/cantarell"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/registerButton"
        android:textColor="@color/title_color"
        android:textColorHighlight="@color/title_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/parentPhoneNumber"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/cantarell"
        android:hint="@string/phoneHint"
        android:inputType="text|phone"
        android:selectAllOnFocus="true"
        android:textColor="@color/title_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantarell"
        android:hint="@string/passwordHint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/title_color"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeAddress" />

    <EditText
        android:id="@+id/studentName"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantarell"
        android:hint="@string/studentNameHint"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/title_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>