<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ParentControl">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="182dp"
        app:layout_constraintBottom_toTopOf="@+id/datePickerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/parentOf"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorLink="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/atDateToSchool"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorLink="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <TextView
        android:id="@+id/situation"
        android:layout_width="252dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorLink="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/xButton"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:filterTouchesWhenObscured="true"
        android:focusable="true"
        android:outlineProvider="none"
        android:scaleType="centerInside"
        android:src="@drawable/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkButton"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:text="@string/checkButton"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="48dp"
        android:text="@string/xButton"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/xButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/checkButton"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="72dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:filterTouchesWhenObscured="true"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/check"
        app:layout_constraintEnd_toStartOf="@+id/xButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/dateText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:text="20.05.2021"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/datePickerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="380dp"
        android:backgroundTint="@color/button_color"
        android:text="Tarih"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dateText"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentName"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintGuide_begin="21dp"
        app:layout_constraintStart_toEndOf="@+id/guideline3" />

</androidx.constraintlayout.widget.ConstraintLayout>